--- a/app/views/welcome/jmpress.html
+++ b/app/views/welcome/jmpress.html
@@ -74,11 +74,17 @@
                                         <br>
                                         <br>
 
-                                        <a class="button button-large button-border button-rounded tright" style="margin-right: 200px; width: 150px;padding: 0px 43px"><b style="text-align:center;">What?</b></a>
+                                        <button id="babag-what" class="button button-large button-border button-rounded tright" style="margin-right: 200px; width: 150px;padding: 0px 43px"><b style="text-align:center;">What?</b></button>
+                                        <p id="babag-what-answer" style='display:none;color:black'>foo foo bar bar
+                                            <br> foo bar foo bar</p>
 
-                                        <a class="button button-large button-border button-rounded tright" style=" width: 150px; padding: 0px 43px"><b style="text-align:center;">Why?</b></a>
+                                        <a id="babag-why" class="button button-large button-border button-rounded tright" style=" width: 150px; padding: 0px 43px"><b style="text-align:center;">Why?</b></a>
+                                        <p id="babag-why-answer" style='display:none;color:black'>foo foo bar bar
+                                            <br> foo bar foo bar</p>
 
-                                        <a class="button button-large button-border button-rounded tright" style="margin-left: 200px; width: 150px; padding: 0px 43px"><b style="text-align:center;">Who?</b></a>
+                                        <a id="babag-who" class="button button-large button-border button-rounded tright" style="margin-left: 200px; width: 150px; padding: 0px 43px"><b style="text-align:center;">Who?</b></a>
+                                        <p id="babag-who-answer" style='display:none;color:black'>foo foo bar bar
+                                            <br> foo bar foo bar</p>
                                     </div>
                                 </div>
                             </div>
@@ -180,11 +186,17 @@
                                         <br>
                                         <br>
 
-                                        <a class="button button-large button-border button-rounded tright" style="margin-right: 200px; width: 150px;"><b style="text-align:center;">Developer</b></a>
+                                        <a id="careers1" class="button button-large button-border button-rounded tright" style="margin-right: 200px; width: 150px;"><b style="text-align:center;">Developer</b></a>
+                                        <p id="careers1-answer" style='display:none;color:black'>foo foo bar bar
+                                            <br> foo bar foo bar</p>
 
-                                        <a class="button button-large button-border button-rounded tright" style=" width: 150px; padding: 0px 43px"><b style="text-align:center;">Editor</b></a>
+                                        <a id="careers2" class="button button-large button-border button-rounded tright" style=" width: 150px; padding: 0px 43px"><b style="text-align:center;">Editor</b></a>
+                                        <p id="careers2-answer" style='display:none;color:black'>foo foo bar bar
+                                            <br> foo bar foo bar</p>
 
-                                        <a class="button button-large button-border button-rounded tright" style="margin-left: 200px; width: 150px"><b style="text-align:center;">Operations</b></a>
+                                        <a id="careers3" class="button button-large button-border button-rounded tright" style="margin-left: 200px; width: 150px"><b style="text-align:center;">Operations</b></a>
+                                        <p id="careers3-answer" style='display:none;color:black'>foo foo bar bar
+                                            <br> foo bar foo bar</p>
 
                                         <br>
                                         <br>
@@ -192,11 +204,17 @@
                                         <br>
                                         <br>
 
-                                        <a class="button button-large button-border button-rounded tright" style="margin-right: 200px; width: 150px"><b style="text-align:center;">Copy Editor</b></a>
+                                        <a id="careers4" class="button button-large button-border button-rounded tright" style="margin-right: 200px; width: 150px"><b style="text-align:center;">Copy Editor</b></a>
+                                        <p id="careers4-answer" style='display:none;color:black'>foo foo bar bar
+                                            <br> foo bar foo bar</p>
 
-                                        <a class="button button-large button-border button-rounded tright" style="width: 150px; padding: 0px 30px"><b style="text-align:center;">Designer</b></a>
+                                        <a id="careers5" class="button button-large button-border button-rounded tright" style="width: 150px; padding: 0px 30px"><b style="text-align:center;">Designer</b></a>
+                                        <p id="careers5-answer" style='display:none;color:black'>foo foo bar bar
+                                            <br> foo bar foo bar</p>
 
-                                        <a class="button button-large button-border button-rounded tright" style="margin-left: 200px; width: 150px;padding: 0px 30px"><b style="text-align:center;">Animator</b></a>
+                                        <a id="careers6" class="button button-large button-border button-rounded tright" style="margin-left: 200px; width: 150px;padding: 0px 30px"><b style="text-align:center;">Animator</b></a>
+                                        <p id="careers6-answer" style='display:none;color:black'>foo foo bar bar
+                                            <br> foo bar foo bar</p>
 
                                     </div>
 
@@ -275,12 +293,86 @@
                     });
                 });
             });
+            $(document).ready(function() {
+                $('#babag-what').click(function() {
+                    $('#babag-what').hide();
+                    $('#babag-what-answer').show(1000);
+                })
+                $('#babag-what-answer').click(function() {
+                    $('#babag-what-answer').hide(1000);
+                    $('#babag-what').show();
+                })
 
-            function toggle(id) {
-                var el = document.getElementById(id);
-                if (el.style.display == 'block')
-                    el.style.display = 'none';
-                else
-                    el.style.display = 'block';
-            }
+                $('#babag-why').click(function() {
+                    $('#babag-why').hide();
+                    $('#babag-why-answer').show(1000);
+                })
+                $('#babag-why-answer').click(function() {
+                    $('#babag-why-answer').hide(1000);
+                    $('#babag-why').show();
+                })
+
+                $('#babag-who').click(function() {
+                    $('#babag-who').hide();
+                    $('#babag-who-answer').show(1000);
+                })
+                $('#babag-who-answer').click(function() {
+                    $('#babag-who-answer').hide(1000);
+                    $('#babag-who').show();
+                })
+
+                $('#careers1').click(function() {
+                    $('#careers1').hide();
+                    $('#careers1-answer').show(1000);
+                })
+                $('#careers1-answer').click(function() {
+                    $('#careers1-answer').hide(1000);
+                    $('#careers1').show();
+                })
+
+                 $('#careers2').click(function() {
+                    $('#careers2').hide();
+                    $('#careers2-answer').show(1000);
+                })
+                $('#careers2-answer').click(function() {
+                    $('#careers2-answer').hide(1000);
+                    $('#careers2').show();
+                })
+
+                 $('#careers3').click(function() {
+                    $('#careers3').hide();
+                    $('#careers3-answer').show(1000);
+                })
+                $('#careers3-answer').click(function() {
+                    $('#careers3-answer').hide(1000);
+                    $('#careers3').show();
+                })
+
+                 $('#careers4').click(function() {
+                    $('#careers4').hide();
+                    $('#careers4-answer').show(1000);
+                })
+                $('#careers4-answer').click(function() {
+                    $('#careers4-answer').hide(1000);
+                    $('#careers4').show();
+                })
+
+                 $('#careers5').click(function() {
+                    $('#careers5').hide();
+                    $('#careers5-answer').show(1000);
+                })
+                $('#careers5-answer').click(function() {
+                    $('#careers5-answer').hide(1000);
+                    $('#careers5').show();
+                })
+
+                 $('#careers6').click(function() {
+                    $('#careers6').hide();
+                    $('#careers6-answer').show(1000);
+                })
+                $('#careers6-answer').click(function() {
+                    $('#careers6-answer').hide(1000);
+                    $('#careers6').show();
+                })
+            });
             </script>
