Changed the babag image to be absolute so that the image is fixed for all screen resolutions

--- a/app/views/welcome/jmpress.html
+++ b/app/views/welcome/jmpress.html
@@ -59,9 +59,10 @@
                             <div id="baba" class="step" data-x="10000" data-z="10" data-rotate-x="90" data-scale="15">
 
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
-                                    <div class="babag"></div>
+
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200;">
+                                            <div class="babag"></div>
                                             <div class="heroimage"></div>
                                             <b style="text-align: right; font-size: 50px">BabaG</b><br><i style="text-align: center; font-size: 35px">Namma smart friend!</i>
                                         </h2>
@@ -75,7 +76,7 @@
                                         <br>
 
                                         <button id="babag-what" class="button button-large button-border button-rounded tright" style="margin-right: 200px; width: 150px;padding: 0px 43px"><b style="text-align:center;">What?</b></button>
-                                        <p id="babag-what-answer" style='display:none;color:black'>foo foo bar bar
+                                        <p id="babag-what-answer" style='display:none;color:black;'>foo foo bar bar
                                             <br> foo bar foo bar</p>
 
                                         <a id="babag-why" class="button button-large button-border button-rounded tright" style=" width: 150px; padding: 0px 43px"><b style="text-align:center;">Why?</b></a>
@@ -302,7 +303,6 @@
                     $('#babag-what-answer').hide(1000);
                     $('#babag-what').show();
                 })
-
                 $('#babag-why').click(function() {
                     $('#babag-why').hide();
                     $('#babag-why-answer').show(1000);
@@ -311,7 +311,6 @@
                     $('#babag-why-answer').hide(1000);
                     $('#babag-why').show();
                 })
-
                 $('#babag-who').click(function() {
                     $('#babag-who').hide();
                     $('#babag-who-answer').show(1000);
@@ -320,7 +319,6 @@
                     $('#babag-who-answer').hide(1000);
                     $('#babag-who').show();
                 })
-
                 $('#careers1').click(function() {
                     $('#careers1').hide();
                     $('#careers1-answer').show(1000);
@@ -329,8 +327,7 @@
                     $('#careers1-answer').hide(1000);
                     $('#careers1').show();
                 })
-
-                 $('#careers2').click(function() {
+                $('#careers2').click(function() {
                     $('#careers2').hide();
                     $('#careers2-answer').show(1000);
                 })
@@ -338,8 +335,7 @@
                     $('#careers2-answer').hide(1000);
                     $('#careers2').show();
                 })
-
-                 $('#careers3').click(function() {
+                $('#careers3').click(function() {
                     $('#careers3').hide();
                     $('#careers3-answer').show(1000);
                 })
@@ -347,8 +343,7 @@
                     $('#careers3-answer').hide(1000);
                     $('#careers3').show();
                 })
-
-                 $('#careers4').click(function() {
+                $('#careers4').click(function() {
                     $('#careers4').hide();
                     $('#careers4-answer').show(1000);
                 })
@@ -356,8 +351,7 @@
                     $('#careers4-answer').hide(1000);
                     $('#careers4').show();
                 })
-
-                 $('#careers5').click(function() {
+                $('#careers5').click(function() {
                     $('#careers5').hide();
                     $('#careers5-answer').show(1000);
                 })
@@ -365,8 +359,7 @@
                     $('#careers5-answer').hide(1000);
                     $('#careers5').show();
                 })
-
-                 $('#careers6').click(function() {
+                $('#careers6').click(function() {
                     $('#careers6').hide();
                     $('#careers6-answer').show(1000);
                 })
