Added acontent for about page

--- a/app/views/welcome/jmpress.html
+++ b/app/views/welcome/jmpress.html
@@ -91,10 +91,86 @@
                             </div>
 
                             <div id="about" class="step" data-x="10000" data-z="10" data-rotate-x="90" data-rotate-y="90" data-scale="15">
-                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
+                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 40vh;background: white">
 
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left"><div class="heroimage"></div></h2>
+                                    </div>
+                                </div>
+                                <div class="col_full center nomargin nopadding" style=" min-height: 50vh; max-height:50vh; background: #F7F5E9">
+
+                                    <div class="center divcenter row clearfix commonheight " style="background:transparent; margin-top: 4vh">
+                                        <div id="not_centered" class="col_one_third">
+                                            <div class="feature-box fbox-small fbox-plain" data-animate="fadeIn">
+                                                <div class="fbox-icon">
+                                                    <a href="#"><i class="icon-phone2"></i></a>
+                                                </div>
+                                                <h3 class="fleft" style="font-family:museo-sans-condensed;letter-spacing:1px;">FrontEnd Agility</h3>
+                                                <div class="clear"></div>
+                                                <p style="text-align:left;"> Our RESTful modelling allows all incubated products to have multiple front ends.
+                                                    <br> Responsive Layouts ensure that our web pages remain app first.</p>
+                                            </div>
+                                        </div>
+                                        <script>
+                                        $("#para").removeClass("center");
+                                        </script>
+
+                                        <div id="not_centered" class="col_one_third">
+                                            <div class="feature-box fbox-small fbox-plain" data-animate="fadeIn" data-delay="200">
+                                                <div class="fbox-icon">
+                                                    <a href="#"><i class="icon-check"></i> </a>
+                                                </div>
+                                                <h3 class="fleft" style="font-family:museo-sans-condensed;letter-spacing:1px;">Test Driven</h3>
+                                                <div class="clear"></div>
+                                                <p style="text-align:left;">Our focuss on TDD, continous integration, automated behavioural tests and developer testing ensure that all efforts stay focused and stack up without regression. </p>
+                                            </div>
+                                        </div>
+
+                                        <div id="not_centered" class="col_one_third col_last">
+                                            <div class="feature-box fbox-small fbox-plain" data-animate="fadeIn" data-delay="400">
+                                                <div class="fbox-icon">
+                                                    <a href="#"><i class="icon-star2"></i></a>
+                                                </div>
+                                                <h3 class="fleft" style="font-family:museo-sans-condensed;letter-spacing:1px;">World Class DevOps</h3>
+                                                <div class="clear"></div>
+                                                <p style="text-align:left;">Prod like development containers. Continous Integration and auto deployed staging environments. 12-factor friendly scalable, secure & reliable cloud environments. </p>
+                                            </div>
+                                        </div>
+
+                                        <div class="clear"></div>
+
+                                        <div id="not_centered" class="col_one_third">
+                                            <div class="feature-box fbox-small fbox-plain" data-animate="fadeIn" data-delay="600">
+                                                <div class="fbox-icon">
+                                                    <a href="#"><i class="icon-video"></i></a>
+                                                </div>
+                                                <h3 class="fleft" style="font-family:museo-sans-condensed;letter-spacing:1px;">Presentation Centered</h3>
+                                                <div class="clear"></div>
+                                                <p style="text-align:left;">Choose help on visual assets, imagery & videography along with context specific content and copy from a wide spectrum of external collaborators.</p>
+                                            </div>
+                                        </div>
+
+                                        <div id="not_centered" class="col_one_third">
+                                            <div class="feature-box fbox-small fbox-plain" data-animate="fadeIn" data-delay="800">
+                                                <div class="fbox-icon">
+                                                    <a href="#"><i class="icon-params"></i></a>
+                                                </div>
+                                                <h3 class="fleft" style="font-family:museo-sans-condensed;letter-spacing:1px;">Complete Control</h3>
+                                                <div class="clear"></div>
+                                                <p style="text-align:left;">Organize and Manage Production Data; Realtime system analyses. Expert SEO and SEM. A/B & Experiment based decision making.</p>
+                                            </div>
+                                        </div>
+
+                                        <div class="col_one_third col_last">
+                                            <div class="feature-box fbox-small fbox-plain" data-animate="fadeIn" data-delay="1000">
+                                                <div class="fbox-icon">
+                                                    <a href="#"><i class="icon-fire"></i></a>
+                                                </div>
+                                                <h3 class="fleft" style="font-family:museo-sans-condensed;letter-spacing:1px;">Agile Teams</h3>
+                                                <div class="clear"></div>
+                                                <p style="text-align:left;">Pair programming. Pace and goal based staffing. Transparency in work.</p>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
