--- a/app/assets/stylesheets/font-icons.css
+++ b/app/assets/stylesheets/font-icons.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'font-icons';
-	src:url('fonts/font-icons.eot');
-	src:url('fonts/font-icons.eot') format('embedded-opentype'),
-		url('fonts/font-icons.woff') format('woff'),
-		url('fonts/font-icons.ttf') format('truetype'),
-		url('fonts/font-icons.svg') format('svg');
+	src:url('font-icons.eot');
+	src:url('font-icons.eot') format('embedded-opentype'),
+		url('font-icons.woff') format('woff'),
+		url('font-icons.ttf') format('truetype'),
+		url('font-icons.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -13,9 +13,9 @@
 	font-family: 'lined-icons';
 	src:url('fonts/lined-icons.eot');
 	src:url('fonts/lined-icons.eot') format('embedded-opentype'),
-		url('fonts/lined-icons.woff') format('woff'),
-		url('fonts/lined-icons.ttf') format('truetype'),
-		url('fonts/lined-icons.svg') format('svg');
+		url('lined-icons.woff') format('woff'),
+		url('lined-icons.ttf') format('truetype'),
+		url('lined-icons.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
