--- a/app/views/welcome/jmpress.html
+++ b/app/views/welcome/jmpress.html
@@ -103,7 +103,7 @@
                                         <div id="not_centered" class="col_one_third">
                                             <div class="feature-box fbox-small fbox-plain" data-animate="fadeIn">
                                                 <div class="fbox-icon">
-                                                    <a href="#"><i class="icon-phone2"></i></a>
+                                                    <i class="icon-phone2"></i>
                                                 </div>
                                                 <h3 class="fleft" style="font-family:museo-sans-condensed;letter-spacing:1px;">FrontEnd Agility</h3>
                                                 <div class="clear"></div>
@@ -129,7 +129,7 @@
                                         <div id="not_centered" class="col_one_third col_last">
                                             <div class="feature-box fbox-small fbox-plain" data-animate="fadeIn" data-delay="400">
                                                 <div class="fbox-icon">
-                                                    <a href="#"><i class="icon-star2"></i></a>
+                                                    <i class="icon-star2"></i>
                                                 </div>
                                                 <h3 class="fleft" style="font-family:museo-sans-condensed;letter-spacing:1px;">World Class DevOps</h3>
                                                 <div class="clear"></div>
@@ -142,7 +142,7 @@
                                         <div id="not_centered" class="col_one_third">
                                             <div class="feature-box fbox-small fbox-plain" data-animate="fadeIn" data-delay="600">
                                                 <div class="fbox-icon">
-                                                    <a href="#"><i class="icon-video"></i></a>
+                                                    <i class="icon-video"></i>
                                                 </div>
                                                 <h3 class="fleft" style="font-family:museo-sans-condensed;letter-spacing:1px;">Presentation Centered</h3>
                                                 <div class="clear"></div>
@@ -153,7 +153,7 @@
                                         <div id="not_centered" class="col_one_third">
                                             <div class="feature-box fbox-small fbox-plain" data-animate="fadeIn" data-delay="800">
                                                 <div class="fbox-icon">
-                                                    <a href="#"><i class="icon-params"></i></a>
+                                                    <i class="icon-params"></i>
                                                 </div>
                                                 <h3 class="fleft" style="font-family:museo-sans-condensed;letter-spacing:1px;">Complete Control</h3>
                                                 <div class="clear"></div>
@@ -164,7 +164,7 @@
                                         <div class="col_one_third col_last">
                                             <div class="feature-box fbox-small fbox-plain" data-animate="fadeIn" data-delay="1000">
                                                 <div class="fbox-icon">
-                                                    <a href="#"><i class="icon-fire"></i></a>
+                                                    <i class="icon-fire"></i>
                                                 </div>
                                                 <h3 class="fleft" style="font-family:museo-sans-condensed;letter-spacing:1px;">Agile Teams</h3>
                                                 <div class="clear"></div>
