added the new css file

--- a/app/views/welcome/jmpress.html
+++ b/app/views/welcome/jmpress.html
@@ -34,7 +34,7 @@
 
                         <div id="simple" style="background: white;perspective: 5500px !important;">
 
-                            <div id="home" class="step nomargin" data-x="10000" data-z="10" data-scale="15">
+                            <div id="home" class="step nomargin" data-x="10000"  data-scale="15">
 
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
@@ -56,7 +56,7 @@
                                 </div>
                             </div>
 
-                            <div id="baba" class="step" data-x="10000" data-z="10" data-rotate-x="90" data-scale="15">
+                            <div id="baba" class="step" data-x="10000"  data-rotate-x="90" data-scale="15">
 
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
@@ -90,35 +90,38 @@
                                 </div>
                             </div>
 
-                            <div id="about" class="step" data-x="10000" data-z="10" data-rotate-x="90" data-rotate-y="90" data-scale="15">
+                            <div id="about" class="step" data-x="10000"  data-rotate-x="90" data-rotate-y="90" data-scale="15">
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 40vh;background: white">
 
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
-                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left"><div class="heroimage"></div></h2>
+                                        <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">
+                                            <div class="heroimage">
+
+                                            </div>
+                                             <div class="heading-block center">
+                                                    <p style="font-family:museo-sans-condensed;letter-spacing:1px;">What we bring on to the table!</p>
+                                                </div>
+                                        </h2>
                                     </div>
                                 </div>
                                 <div class="col_full center nomargin nopadding" style=" min-height: 50vh; max-height:50vh; background: #F7F5E9">
 
                                     <div class="center divcenter row clearfix commonheight " style="background:transparent; margin-top: 4vh">
                                         <div id="not_centered" class="col_one_third">
-                                            <div class="feature-box fbox-small fbox-plain" data-animate="fadeIn">
+                                            <div class="feature-box fbox-small fbox-plain">
                                                 <div class="fbox-icon">
                                                     <i class="icon-phone2"></i>
                                                 </div>
                                                 <h3 class="fleft" style="font-family:museo-sans-condensed;letter-spacing:1px;">FrontEnd Agility</h3>
                                                 <div class="clear"></div>
-                                                <p style="text-align:left;"> Our RESTful modelling allows all incubated products to have multiple front ends.
-                                                    <br> Responsive Layouts ensure that our web pages remain app first.</p>
+                                                <p style="text-align:left;"> Our RESTful modelling allows all incubated products to have multiple front ends. Responsive Layouts ensure that our web pages remain app first.</p>
                                             </div>
                                         </div>
-                                        <script>
-                                        $("#para").removeClass("center");
-                                        </script>
 
                                         <div id="not_centered" class="col_one_third">
                                             <div class="feature-box fbox-small fbox-plain" data-animate="fadeIn" data-delay="200">
                                                 <div class="fbox-icon">
-                                                    <a href="#"><i class="icon-check"></i> </a>
+                                                    <i class="icon-check"></i>
                                                 </div>
                                                 <h3 class="fleft" style="font-family:museo-sans-condensed;letter-spacing:1px;">Test Driven</h3>
                                                 <div class="clear"></div>
@@ -162,7 +165,7 @@
                                         </div>
 
                                         <div class="col_one_third col_last">
-                                            <div class="feature-box fbox-small fbox-plain" data-animate="fadeIn" data-delay="1000">
+                                            <div class="feature-box fbox-small fbox-plain">
                                                 <div class="fbox-icon">
                                                     <i class="icon-fire"></i>
                                                 </div>
@@ -175,7 +178,7 @@
                                 </div>
                             </div>
 
-                            <div id="people" class="step" data-x="10000" data-z="10" data-rotate-x="90" data-rotate-y="180" data-scale="15">
+                            <div id="people" class="step" data-x="10000"  data-rotate-x="90" data-rotate-y="180" data-scale="15">
 
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
@@ -240,7 +243,7 @@
                                 </h2>
                             </div>
 
-                            <div id="careers" class="step" data-x="10000" data-z="10" data-rotate-x="90" data-rotate-y="270" data-scale="15">
+                            <div id="careers" class="step" data-x="10000"  data-rotate-x="90" data-rotate-y="270" data-scale="15">
 
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
@@ -298,7 +301,7 @@
                                 </div>
                             </div>
 
-                            <div id="contact" class="step" data-x="10000" data-z="10" data-rotate-x="180" data-scale="15">
+                            <div id="contact" class="step" data-x="10000"  data-rotate-x="180" data-scale="15">
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 25vh;background: white">
 
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
