Fixed the buttons to be in the exact position for all screen resolutions. Semi fixed the text appearing in the right position

--- a/app/views/welcome/jmpress.html
+++ b/app/views/welcome/jmpress.html
@@ -75,16 +75,16 @@
                                         <br>
                                         <br>
 
-                                        <button id="babag-what" class="button button-large button-border button-rounded tright" style="margin-right: 200px; width: 150px;padding: 0px 43px"><b style="text-align:center;">What?</b></button>
-                                        <p id="babag-what-answer" style='display:none;color:black;'>foo foo bar bar
+                                        <button id="babag-what" class="button button-large button-border button-rounded tright" style="float: left; left: 10%; width: auto; padding: 0px 43px"><b style="text-align:center;">What?</b></button>
+                                        <p id="babag-what-answer" style='float: left; left: 10%; display:none;color:black;'>foo foo bar bar
                                             <br> foo bar foo bar</p>
 
-                                        <a id="babag-why" class="button button-large button-border button-rounded tright" style=" width: 150px; padding: 0px 43px"><b style="text-align:center;">Why?</b></a>
-                                        <p id="babag-why-answer" style='display:none;color:black'>foo foo bar bar
+                                        <a id="babag-why" class="button button-large button-border button-rounded tright" style=" width: auto; padding: 0px 43px"><b style="text-align:center;">Why?</b></a>
+                                        <p id="babag-why-answer" style='margin-left: auto;margin-right: auto; display:none;color:black'>foo foo bar bar
                                             <br> foo bar foo bar</p>
 
-                                        <a id="babag-who" class="button button-large button-border button-rounded tright" style="margin-left: 200px; width: 150px; padding: 0px 43px"><b style="text-align:center;">Who?</b></a>
-                                        <p id="babag-who-answer" style='display:none;color:black'>foo foo bar bar
+                                        <a id="babag-who" class="button button-large button-border button-rounded tright" style="float: right; right: 10%; width: auto; padding: 0px 43px"><b style="text-align:center;">Who?</b></a>
+                                        <p id="babag-who-answer" style='float: right; right: 20%; display:none;color:black'>foo foo bar bar
                                             <br> foo bar foo bar</p>
                                     </div>
                                 </div>
@@ -266,16 +266,16 @@
                                         <br>
                                         <br>
 
-                                        <a id="careers1" class="button button-large button-border button-rounded tright" style="margin-right: 200px; width: 150px;"><b style="text-align:center;">Developer</b></a>
-                                        <p id="careers1-answer" style='display:none;color:black'>foo foo bar bar
+                                        <a id="careers1" class="button button-large button-border button-rounded tright" style="float: left; left: 15%; width: auto;"><b style="text-align:center;">Developer</b></a>
+                                        <p id="careers1-answer" style='display:none;color:black;float: left; left: 15%;'>foo foo bar bar
                                             <br> foo bar foo bar</p>
 
-                                        <a id="careers2" class="button button-large button-border button-rounded tright" style=" width: 150px; padding: 0px 43px"><b style="text-align:center;">Editor</b></a>
+                                        <a id="careers2" class="button button-large button-border button-rounded tright" style=" width: auto; padding: 0px 43px"><b style="text-align:center;">Editor</b></a>
                                         <p id="careers2-answer" style='display:none;color:black'>foo foo bar bar
                                             <br> foo bar foo bar</p>
 
-                                        <a id="careers3" class="button button-large button-border button-rounded tright" style="margin-left: 200px; width: 150px"><b style="text-align:center;">Operations</b></a>
-                                        <p id="careers3-answer" style='display:none;color:black'>foo foo bar bar
+                                        <a id="careers3" class="button button-large button-border button-rounded tright" style="float: right; right: 15%; width: auto"><b style="text-align:center;">Operations</b></a>
+                                        <p id="careers3-answer" style='display:none;color:black;float: right; right: 15%;'>foo foo bar bar
                                             <br> foo bar foo bar</p>
 
                                         <br>
@@ -284,16 +284,16 @@
                                         <br>
                                         <br>
 
-                                        <a id="careers4" class="button button-large button-border button-rounded tright" style="margin-right: 200px; width: 150px"><b style="text-align:center;">Copy Editor</b></a>
-                                        <p id="careers4-answer" style='display:none;color:black'>foo foo bar bar
+                                        <a id="careers4" class="button button-large button-border button-rounded tright" style="float: left; left: 15%; width: auto"><b style="text-align:center;">Copy Editor</b></a>
+                                        <p id="careers4-answer" style='display:none;color:black;float: left; left: 15%;'>foo foo bar bar
                                             <br> foo bar foo bar</p>
 
-                                        <a id="careers5" class="button button-large button-border button-rounded tright" style="width: 150px; padding: 0px 30px"><b style="text-align:center;">Designer</b></a>
+                                        <a id="careers5" class="button button-large button-border button-rounded tright" style="width: auto; padding: 0px 30px"><b style="text-align:center;">Designer</b></a>
                                         <p id="careers5-answer" style='display:none;color:black'>foo foo bar bar
                                             <br> foo bar foo bar</p>
 
-                                        <a id="careers6" class="button button-large button-border button-rounded tright" style="margin-left: 200px; width: 150px;padding: 0px 30px"><b style="text-align:center;">Animator</b></a>
-                                        <p id="careers6-answer" style='display:none;color:black'>foo foo bar bar
+                                        <a id="careers6" class="button button-large button-border button-rounded tright" style="float: right; right: 15%; width: auto;padding: 0px 30px"><b style="text-align:center;">Animator</b></a>
+                                        <p id="careers6-answer" style='display:none;color:black;float: right; right: 15%;'>foo foo bar bar
                                             <br> foo bar foo bar</p>
 
                                     </div>
