--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -316,7 +316,21 @@
                                 <div class="col_full center nomargin nopadding" style=" min-height: 50vh; max-height:50vh; background: #F7F5E9">
 
                                     <div class="center divcenter row clearfix commonheight " style="background:transparent; margin-top: 4vh">
-
+                                        <%= form_for @contact,url: contacts_path, method: :post, :remote => true, :html => {:class => 'form-vertical' } do |f|%>
+                                            <%=f.label :name%>
+                                            <br>
+                                            <%= f.text_field :name, :required => true%>
+                                            <br>
+                                            <%=f.label :email%>
+                                            <br>
+                                            <%= f.text_field :email, :required => true%>
+                                            <br>
+                                            <%=f.label :message%>
+                                            <br>
+                                            <%= f.text_area :message, :as => :text, :required => true%>
+                                            <br>
+                                            <%= f.submit "Send message", class: "btn btn-primary"%>
+                                        <%end%>
                                     </div>
                                 </div>
                             </div>
