--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -313,21 +313,33 @@
                                         </h2>
                                     </div>
                                 </div>
-                                <div class="col_full center nomargin nopadding" style=" min-height: 50vh; max-height:50vh; background: #F7F5E9">
+                                <div class="content-box col_full center nomargin nopadding" style=" min-height: 50vh; max-height:50vh; background: #F7F5E9">
 
                                     <div class="center divcenter row clearfix commonheight " style="background:transparent; margin-top: 4vh">
-                                        <%= form_for @contact,url: contacts_path, method: :post, :remote => true, :html => {:class => 'form-vertical' } do |f|%>
-                                            <%=f.label :name%>
+                                        <%= form_for @contact,url: contacts_path, method: :post, :remote => true, :html => {:class => "form-horizontal center" } do |f|%>
+                                            <div class="form-group">
+                                                <%=f.label :name%>
+                                                <br>
+                                                <div class="col-md-16">
+                                                    <%= f.text_field :name, :required => true%>
+                                                </div>
+                                            </div>
                                             <br>
-                                            <%= f.text_field :name, :required => true%>
+                                            <div class="form-group">
+                                                <%=f.label :email%>
+                                                <br>
+                                                <div class="col-md-16">
+                                                    <%= f.text_field :email, :required => true%>
+                                                </div>
+                                            </div>
                                             <br>
-                                            <%=f.label :email%>
-                                            <br>
-                                            <%= f.text_field :email, :required => true%>
-                                            <br>
-                                            <%=f.label :message%>
-                                            <br>
-                                            <%= f.text_area :message, :as => :text, :required => true%>
+                                            <div class="form-group">
+                                                <%=f.label :message%>
+                                                <br>
+                                                <div class="col-md-`6">
+                                                    <%= f.text_area :message, rows: 5 , class: 'content-box', :required => true%>
+                                                </div>
+                                            </div>
                                             <br>
                                             <%= f.submit "Send message", class: "btn btn-primary"%>
                                         <%end%>
