--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -1,7 +1,7 @@
 <%=stylesheet_link_tag "simple" %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
         </head>
-
+<link href="https://fonts.googleapis.com/css?family=Playfair+Display|Playball|Cardo|Cantarell:400i" rel="stylesheet">
         <body class="stretched ">
             <div id="wrapper" class=" fallback-message clearfix" style="background: transparent;">
                 <div href="#home" id="logo">
@@ -42,7 +42,7 @@
 
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200;">
                                             <div class="heroimage"></div>
-                                            <b style="text-align: right; font-size: 50px">IdeaPortal</b><br><i style="text-align: center; font-size: 35px">Breathing Life Into Vision</i>
+                                            <b style="text-align: right; font-size: 50px;font-family: 'Playfair Display', serif;">IdeaPortal</b><br><i style="text-align: center; font-size: 35px;font-family: 'Cantarell', sans-serif;">Breathing Life Into Vision</i>
                                         </h2>
 
                                     </div>
@@ -51,7 +51,7 @@
                                 <div class="col_full center nomargin nopadding" style=" min-height: 50vh; max-height:50vh; background: #F7F5E9">
 
                                     <div class="center divcenter row clearfix commonheight " style="background:transparent; margin-top: 4vh">
-                                        <p style="font-weight: 200; font-size: 25px; color: black"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non velit sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                                        <p style="font-weight: 200; font-size: 25px; color: black;font-family: 'Playball', cursive;"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non velit sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
                                     </div>
                                 </div>
                             </div>
@@ -64,7 +64,7 @@
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200;">
                                             <div class="babag"></div>
                                             <div class="heroimage"></div>
-                                            <b style="text-align: right; font-size: 50px">BabaG</b><br><i style="text-align: center; font-size: 35px">Namma smart friend!</i>
+                                            <b style="text-align: right; font-size: 50px">BabaG</b><br><i style="text-align: center; font-size: 35px;font-family: 'Cantarell', sans-serif;">Namma smart friend!</i>
                                         </h2>
                                     </div>
                                 </div>
@@ -99,7 +99,7 @@
 
                                             </div>
                                              <div class="heading-block center">
-                                                    <p style="font-family:museo-sans-condensed;letter-spacing:1px;">What we bring on to the table!</p>
+                                                    <p style="font-family:museo-sans-condensed;letter-spacing:1px;font-family: 'Cantarell', sans-serif;">What we bring on to the table!</p>
                                                 </div>
                                         </h2>
                                     </div>
@@ -185,7 +185,7 @@
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">
                                             <div class="heroimage"></div>
-                                            <p style="text-align: left; font-size: 15px">
+                                            <p style="text-align: left; font-size: 15px;font-family: 'Cardo', serif;">
                                                 <i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Quisque sit amet lorem vitae tellus vulputate posuere quis sed arcu.<br> Vivamus venenatis metus ut augue sollicitudin, id eleifend libero pretium.<br>Curabitur euismod imperdiet nisi, vel luctus sapien pharetra at.</i>
                                             </p>
                                         </h2>
@@ -252,7 +252,7 @@
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">
                                             <div class="heroimage"></div>
 
-                                            <p style="text-align: left; font-size: 15px">
+                                            <p style="text-align: left; font-size: 15px;font-family: 'Cardo', serif;">
                                                 <i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Quisque sit amet lorem vitae tellus vulputate posuere quis sed arcu.<br> Vivamus venenatis metus ut augue sollicitudin, id eleifend libero pretium.<br>Curabitur euismod imperdiet nisi, vel luctus sapien pharetra at.</i>
                                             </p>
                                         </h2>
@@ -307,8 +307,8 @@
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">
                                             <div class="heroimage"></div>
-                                            <p style="font-size:15px">
-                                                <i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Quisque sit amet lorem vitae tellus vulputate posuere quis sed arcu.</i>
+                                            <p style="font-size:15px;font-family: 'Cantarell', sans-serif;">
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Quisque sit amet lorem vitae tellus vulputate posuere quis sed arcu.
                                             </p>
                                         </h2>
                                     </div>
